--- a/assets/stylesheets/simple_form_image_fields.sass
+++ b/assets/stylesheets/simple_form_image_fields.sass
@@ -1,121 +1,99 @@
 .sdfi-deletable-file
+    align-items: center
+    display: flex
     position: relative
 
-    // input
-    //     cursor: pointer
-    //     overflow: hidden
+    &__preview
+        margin-right: 5px
+        display: none
 
     &__block
         display: none
         padding: 0
 
         .btn
-            // background-color: var(--bs-gray-200)
-            // border: 0
-            // border-bottom-right-radius: 0
-            // border-top-right-radius: 0
-            // border-right: 1px solid var(--bs-gray-400)
-            // color: var(--bs-dark)
-            // // not sure why we need a margin here
-            // margin-top: -2px
-            padding: $input-padding-y $input-padding-x
-            margin: (-$input-padding-y) (-$input-padding-x)
-            margin-inline-end: $input-padding-x
-            color: $form-file-button-color
             @include gradient-bg($form-file-button-bg)
-            pointer-events: none
-            border-color: inherit
-            border-style: solid
-            border-width: 0
-            border-inline-end-width: $input-border-width
-            border-radius: 0
-            @include transition($btn-transition)
+            border: 0
+            border-bottom-right-radius: 0
+            border-top-right-radius: 0
+            border-right: 1px solid var(--bs-gray-400)
+            color: $form-file-button-color
+            white-space: nowrap
 
+            &:focus
+                box-shadow: none
 
+            &:hover:not(:disabled):not([readonly])
+                background-color: $form-file-button-hover-bg
 
         .sdfi-deletable-file__label
-            padding: .25rem 2.1rem .25rem .7rem
+            cursor: pointer
+            overflow: hidden
+            padding: .25rem .7rem
+            text-overflow: ellipsis
+            white-space: nowrap
 
         &.is-valid
             .btn
                 border-right-color: var(--bs-green)
 
+    &__delete-btn
+        align-self: center
+        background-color: white
+        background-image: asset-url('icon-cancel.svg')
+        background-position: center
+        background-repeat: no-repeat
+        background-size: contain
+        cursor: pointer
+        height: calc(0.75em + 0.375rem)
+        margin-right: .7rem
+        margin-top: 1px
+        width: calc(0.75em + 0.375rem)
+
     &--with-file
         input[type='file']
             display: none
 
+        .sdfi-deletable-file__preview
+            display: flex
+
         .sdfi-deletable-file__block
-            display: block
+            display: flex
 
-    &__uploading
-        .custom-file-label
-            background-color: transparent
-            &::after
-                display: none
-        .custom-file-delete
-            display: none
-        .custom-file-background,
-        .custom-file-upload_progress
-            display: block
-
-        .form-control:disabled
-            background-color: white
-
-
-.custom-file-preview
-    height: auto
-    margin-bottom: 10px
-    max-height: 200px
-    max-width: 200px
-    width: auto
+    // &__uploading
+    //     .custom-file-label
+    //         background-color: transparent
+    //         &::after
+    //             display: none
+    //     .custom-file-delete
+    //         display: none
+    //     .custom-file-background,
+    //     .custom-file-upload_progress
+    //         display: block
+    //
+    //     .form-control:disabled
+    //         background-color: white
 
 
-.custom-file-background
-    background-color: white
-    border-radius: .2rem
-    bottom: 1px
-    display: none
-    left: 1px
-    pointer-events: none
-    position: absolute
-    right: 1px
-    top: 1px
-
-.custom-file-upload_progress
-    background-color: #E0E0E0
-    display: none
-    height: 100%
-    left: 0
-    pointer-events: none
-    position: absolute
-    top: 1px
-    width: 0%
-
-.custom-file-delete
-    background-color: #e9ecef
-    border: 0
-    border-left: 1px solid #ced4da
-    border-right: 1px solid #ced4da
-    border-radius: 0
-    color: #495057
-    height: calc(2.225rem - 2px)
-    line-height: 1.4rem
-    margin: 1px 0 -2px 0
-    position: absolute
-    top: 0
-    right: 70px
-    z-index: 1000
-    &::before
-        background-color: white
-        content: " "
-        display: block
-        height: calc(2.25rem - 3px)
-        left: -14px
-        pointer-events: none
-        position: absolute
-        top: 0
-        width: 13px
-
-.single_deletable_file.form-group-invalid
-    .invalid-feedback
-        display: block
+//
+//
+// .custom-file-background
+//     background-color: white
+//     border-radius: .2rem
+//     bottom: 1px
+//     display: none
+//     left: 1px
+//     pointer-events: none
+//     position: absolute
+//     right: 1px
+//     top: 1px
+//
+// .custom-file-upload_progress
+//     background-color: #E0E0E0
+//     display: none
+//     height: 100%
+//     left: 0
+//     pointer-events: none
+//     position: absolute
+//     top: 1px
+//     width: 0%
