--- a/assets/stylesheets/simple_form_image_field.sass
+++ b/assets/stylesheets/simple_form_image_field.sass
@@ -1,10 +1,8 @@
 .sdfi-deletable-file
-    align-items: center
-    display: flex
     position: relative
 
     &__preview
-        margin-right: 5px
+        margin-top: 1rem
         display: none
 
     &__block
