--- a/assets/stylesheets/simple_form_bs5_file_input.sass
+++ b/assets/stylesheets/simple_form_bs5_file_input.sass
@@ -67,6 +67,12 @@
         pointer-events: none
         width: 0%
 
+    &__resize
+        .sdfi-sdfi-deletable-file__resize-image
+            img
+                max-width: 100%
+                max-height: 300px
+
     &--with-file
         input[type='file']
             display: none
