add rotation button

--- a/assets/stylesheets/simple_form_bs5_file_input.sass
+++ b/assets/stylesheets/simple_form_bs5_file_input.sass
@@ -68,6 +68,8 @@
         width: 0%
 
     &__resize
+        .modal-footer
+            justify-content: space-between
         .sdfi-sdfi-deletable-file__resize-image
             img
                 max-width: 100%
